# GEANT4-GPU

./: .gitignore  CMakeCache.txt  CUDA_G4NeutronHPVector.cu  Capstone GanttProject.gan  ProblemStatement.tex  README.md  TestCasesCPU.cpp  cmake_uninstall.cmake  cmake_uninstall.cmake.in  geant4_validate_sources.cmake
CUDA-test/: CMakeLists.txt  DeviceMain.cu  HostMain.cpp  Makefile  main
CUDA-test/src/: DeviceMain.h
CUDA_Hadr04/src/: CMakeLists.txt  CUDA_G4NeutronHPVector.cu
CUDA_Hadr04/src/Hadr04/: CMakeLists.txt  run01.mac
CUDA_Hadr04/src/Hadr04/src/: RunAction.cc
CUDA_simpleTest/src/: CMakeLists.txt  ToyObject.cu
CUDA_simpleTest/src/NeutronHPDataPoint Test Test/: NuetronHPDatePoint GPU comparison.xlsx  Randomize.hh  globals.hh
CUDA_simpleTest/src/NeutronHPDataPoint_Test/: G4NeutronHPDataPoint.cu  G4Types.hh  main.cpp
Documentation/: Geant4-GPUSRS.tex  Geant4-GPU_Schedule.gan  ProblemStatement.tex
Example_G4NeutHP/: README
G4STORK/: .gitignore  CMakeLists.txt  MarshalMakefile  g4stork.cc  g4stork.icc  procgroup
G4STORK/InputFiles/: C6LatticeInput.txt  SCWRDopplerInput.txt  SCWRInput.txt  SCWRJasonInput.txt
G4STORK/include/: BZR_Version_Info.hh  BareSphereConstructor.hh  C6LatticeConstructor.hh  DebugConstructor.hh  ElementNames.hh  GuillaumeConstructor.hh  InfiniteUniformLatticeConstructor.hh  Q_ZED2Constructor.hh  SCWRConstructor.hh  SCWRDopplerConstructor.hh  SCWRJasonConstructor.hh  SLOWPOKEConstructor.hh  STORKBooleanSolid.hh  STORKBooleanSolid.icc  StorkBCTransform.hh  StorkContainers.hh  StorkDelayedNeutron.hh  StorkDelayedNeutronData.hh  StorkElement.hh  StorkEventAction.hh  StorkEventData.hh  StorkHPNeutronBuilder.hh  StorkHadProjectile.hh  StorkHadronCaptureProcess.hh  StorkHadronElasticProcess.hh  StorkHadronFissionProcess.hh  StorkHadronicInteraction.hh  StorkHadronicProcess.hh  StorkHeatTransfer.hh  StorkInterpManager.hh  StorkInterpVector.hh  StorkMatPropChange.hh  StorkMatPropManager.hh  StorkMaterial.hh  StorkMaterialHT.hh  StorkNeutronData.hh  StorkNeutronHPCSData.hh  StorkNeutronHPCapture.hh  StorkNeutronHPChannel.hh  StorkNeutronHPChannelList.hh  (+40 more)
G4STORK/src/: BareSphereConstructor.cc  C6LatticeConstructor.cc  DebugConstructor.cc  ElementNames.cc  GuillaumeConstructor.cc  HeatTransfer.cc  HeatTransfer.h  InfiniteUniformLatticeConstructor.cc  Q_ZED2Constructor.cc  SCWRConstructor.cc  SCWRDopplerConstructor.cc  SCWRJasonConstructor.cc  SLOWPOKEConstructor.cc  STORKBooleanSolid.cc  StorkBCTransform.cc  StorkDelayedNeutron.cc  StorkElement.cc  StorkEventAction.cc  StorkHPNeutronBuilder.cc  StorkHadProjectile.cc  StorkHadronicInteraction.cc  StorkHeatTransfer.cc  StorkInterpVector.cc  StorkMatPropManager.cc  StorkMaterial.cc  StorkNeutronHPCSData.cc  StorkNeutronHPCapture.cc  StorkNeutronHPChannel.cc  StorkNeutronHPChannelList.cc  StorkNeutronHPDataConstructor.cc  StorkNeutronHPElastic.cc  StorkNeutronHPElementData.cc  StorkNeutronHPFission.cc  StorkNeutronHPInelastic.cc  StorkNeutronHPIsoData.cc  StorkNeutronHPNames.cc  StorkNeutronPhysicsList.cc  StorkNeutronProcessBuilder.cc  StorkNeutronSD.cc  StorkParallelRunManager.cc  (+21 more)
Hadr04_Profile/: Critical Classes.txt  Hadr04160121(3).vsps  Hadr04160121(3)_ModuleSummary.csv  Hadr04160121(3)_ProcessSummary.csv  Hadr04160202.vsps
Results/: Geant4_Performance_Results.xlsx  GetXsec-Feb5_3pm-CPU.txt  GetXsec-Feb5_3pm-GPU.txt  Hadr04-Feb13_2pm_BeamOn500-CPU.txt  Hadr04-Feb13_2pm_BeamOn500-GPU.txt  Hadr04-Feb13_2pm_BeamOn600-CPU.txt  Hadr04-Feb13_2pm_BeamOn600-GPU.txt  Hadr04-Feb13_2pm_BeamOn800-CPU.txt  Hadr04-Feb13_2pm_BeamOn800-GPU.txt  Hadr04-Feb23_12pm-gpu1-CPU.txt  Hadr04-Feb23_12pm-gpu1-GPU.txt  Hadr04-Feb23_4pm-gpu1_elemPerThread8-GPU.txt  Hadr04-Feb23_5pm-gpu1_elemPerThread4-GPU.txt  Hadr04-Feb4_6pm-CPU.txt  Hadr04-Feb5_3pm-CPU.txt  Hadr04-Feb5_3pm-GPU.txt  Hadr04-Feb5_4pm-GPU.txt  Hadr04-Feb9_11am_a2c3a71-CPU.rtf  (+5 more)
geant4.10.00.p02/source/processes/hadronic/models/neutron_hp/: CMakeLists.txt  GNUmakefile  sources.cmake
geant4.10.00.p02/source/processes/hadronic/models/neutron_hp/cuda/: CMakeLists.txt  CUDA_G4NeutronHPVector.cu  CUDA_G4NeutronHPVector.h
geant4.10.00.p02/source/processes/hadronic/models/neutron_hp/include/: G4NeutronHPVector.hh
geant4.10.00.p02/source/processes/hadronic/models/neutron_hp/src/: G4NeutronHPVector.cc
topc-2.5.2/: CHANGES  FEATURES  INSTALL  Makefile.in  QUICK-START  README.in  TODO  configure  configure.ac
topc-2.5.2/doc/: Makefile  Makefile.in  logo.fig  topc++.1  topc-version.texi  topc-version.texi.in  topc.dvi  topc.info  topc.texi  topcc.1  topcc.1.in
topc-2.5.2/doc/NOTES/: dead_socket_behavior.txt  topc-architecture  topc_further_adjustment.txt
topc-2.5.2/doc/html/: color.patch  img.patch  topc.html  topc_1.html  topc_10.html  topc_11.html  topc_12.html  topc_13.html  topc_14.html  topc_15.html  topc_16.html  topc_17.html  topc_2.html  topc_3.html  topc_4.html  topc_5.html  topc_6.html  topc_7.html  topc_8.html  topc_9.html  topc_abt.html  topc_foot.html  topc_fot.html  topc_ovr.html  topc_toc.html
topc-2.5.2/doc/html/topc/: topc.html  topc_1.html  topc_10.html  topc_11.html  topc_12.html  topc_13.html  topc_14.html  topc_15.html  topc_16.html  topc_17.html  topc_2.html  topc_3.html  topc_4.html  topc_5.html  topc_6.html  topc_7.html  topc_8.html  topc_9.html  topc_abt.html  topc_fot.html  topc_ovr.html  topc_toc.html
topc-2.5.2/examples/: README  gauss-elim-fine-grain.c  gauss-elim-redo.c  gauss-elim.c  par8queens-abort.c  par8queens-raw.c  parfactor-raw.c  parfactor.c  parquicksort-raw.c  parquicksort.c  parsimple.c  seq8queens.c  seqquicksort.c
topc-2.5.2/src/: Makefile.in  comm-mpi.c  comm-pthread.c  comm-seq.c  comm.h  memory.c  memory_new.c  options.c  procgroup.c  topc.c  topc.h
topc-2.5.2/src/mpinu/: Makefile  Makefile.in  TAGS  cmd.c  master.c  mpi.c  mpiimpl.h  parse.c  procgroup  procgroup.in  sendrecv.c  slave.c  spawn2.c  thwap  utils.c
topc-2.5.2/tests/: README  TODO  testsuite  topc-compare
topc-2.5.2/utils/: README  broadcast.c  checkpoint.c  cygwin  recursion  ssh-killall  ssh-killall.in  ssh-procgroup.c  topc.cc
(+124 files in other folders)
